loadbalancer/IngressRoute-adguard-dashboard-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-dashboard-route
  namespace: loadbalancer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dns.anderwerse.de`)
      services:
        - name: adguard-dashboard
          namespace: adguard
          port: 3000
  tls:
    secretName: anderwersede-tls-certificate
